--- a/index.html
+++ b/index.html
@@ -4,47 +4,91 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Moje investiční portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --bg-color: #0d1117;
+      --card-bg: #161b22;
+      --accent: #4f46e5;
+      --text-light: #ddd;
+      --border: #30363d;
+    }
+    * {
+      box-sizing: border-box;
+    }
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #0d1117;
-      color: #ddd;
+      background: linear-gradient(145deg, #0d1117, #1e2330);
+      color: var(--text-light);
     }
     header {
-      background-color: #161b22;
+      background: linear-gradient(90deg, #2c2f5a, #1f1b3a);
       color: white;
       padding: 1rem;
       text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
-    .container {
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      flex-wrap: wrap;
       padding: 1rem;
+      background: #161b22;
+      position: sticky;
+      top: 3.5rem;
+      z-index: 999;
+    }
+    nav button {
+      background: #1f2633;
+      color: #fff;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+    nav button:hover {
+      background: var(--accent);
+    }
+    .section {
+      display: none;
+      padding: 2rem 1rem;
       max-width: 1200px;
       margin: 0 auto;
+    }
+    .active {
+      display: block;
     }
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 1rem;
+      border-radius: 8px;
+      overflow: hidden;
     }
     th, td {
-      border: 1px solid #30363d;
-      padding: 0.5rem;
+      border: 1px solid var(--border);
+      padding: 0.6rem;
       text-align: left;
     }
     th {
       background-color: #21262d;
     }
-    select, input[type="text"], input[type="number"], input[type="date"], button {
+    select, input[type="text"], input[type="number"] {
       background-color: #161b22;
-      color: #ddd;
-      border: 1px solid #30363d;
-      padding: 0.3rem;
+      color: var(--text-light);
+      border: 1px solid var(--border);
+      padding: 0.4rem;
+      border-radius: 6px;
       margin: 0.5rem 0;
     }
-    button {
-      cursor: pointer;
+    canvas {
+      margin-top: 2rem;
     }
   </style>
 </head>
@@ -52,14 +96,20 @@
   <header>
     <h1>Moje investiční portfolio</h1>
   </header>
+  <nav>
+    <button onclick="showSection('dashboard')">Dashboard</button>
+    <button onclick="showSection('calendar')">Dividendový kalendář</button>
+    <button onclick="showSection('dividends')">Dividendy</button>
+    <button onclick="showSection('diversification')">Diversifikace</button>
+    <button onclick="showSection('transactions')">Transakce</button>
+  </nav>
 
-  <div class="container">
+  <div id="dashboard" class="section active">
     <label for="currency">Měna:</label>
     <select id="currency">
       <option value="USD">USD</option>
       <option value="CZK">CZK</option>
     </select>
-
     <input type="text" id="search" placeholder="Hledat akcie..." style="float:right;"/>
 
     <table id="portfolio">
@@ -77,7 +127,7 @@
       </thead>
       <tbody>
         <tr>
-          <td><img src="https://logo.clearbit.com/apple.com" alt="Apple" width="32" /></td>
+          <td><img src="https://logo.clearbit.com/apple.com" width="32" /></td>
           <td>Apple</td>
           <td>AAPL</td>
           <td>5</td>
@@ -86,37 +136,25 @@
           <td>0.5%</td>
           <td>4.5</td>
         </tr>
-        <tr>
-          <td><img src="https://logo.clearbit.com/microsoft.com" alt="Microsoft" width="32" /></td>
-          <td>Microsoft</td>
-          <td>MSFT</td>
-          <td>3</td>
-          <td>350</td>
-          <td class="value" data-usd="1050">1050</td>
-          <td>0.8%</td>
-          <td>8.4</td>
-        </tr>
       </tbody>
     </table>
   </div>
 
-  <div class="container">
+  <div id="calendar" class="section">
     <h2>📅 Dividendový kalendář</h2>
     <label for="monthSelect">Zobrazit měsíc:</label>
     <select id="monthSelect">
       <option value="all">Vše</option>
       <option value="2025-07">Červenec 2025</option>
-      <option value="2025-08">Srpen 2025</option>
     </select>
-
-    <table id="dividendTable">
+    <table>
       <thead>
         <tr>
           <th>Ticker</th>
           <th>Název</th>
           <th>Ex-div date</th>
           <th>Payment date</th>
-          <th>Částka (USD)</th>
+          <th>Částka</th>
           <th>Frekvence</th>
         </tr>
       </thead>
@@ -129,42 +167,34 @@
           <td>0.73</td>
           <td>Kvartálně</td>
         </tr>
-        <tr data-month="2025-08">
-          <td>O</td>
-          <td>Realty Income</td>
-          <td>2025-08-15</td>
-          <td>2025-09-01</td>
-          <td>0.25</td>
-          <td>Měsíčně</td>
-        </tr>
       </tbody>
     </table>
-
-    <canvas id="dividendChart" style="margin-top:2rem;"></canvas>
   </div>
 
-  <div class="container">
-    <h2>📊 Transakční historie</h2>
-    <form id="transactionForm">
-      <input type="text" id="ticker" placeholder="Ticker" required />
-      <input type="number" id="quantity" placeholder="Počet" required />
-      <input type="number" id="price" placeholder="Cena za kus (USD)" required />
-      <input type="date" id="date" required />
-      <select id="type">
-        <option value="buy">Nákup</option>
-        <option value="sell">Prodej</option>
-      </select>
-      <button type="submit">Přidat</button>
-    </form>
+  <div id="dividends" class="section">
+    <h2>📈 Vyplacené dividendy</h2>
+    <canvas id="dividendChart"></canvas>
+  </div>
 
+  <div id="diversification" class="section">
+    <h2>🌍 Diversifikace</h2>
+    <p>Sem přidáme koláčové grafy sektorů a geografického rozdělení.</p>
+  </div>
+
+  <div id="transactions" class="section">
+    <h2>📋 Transakce</h2>
+    <form id="transactionForm">
+      <input type="text" placeholder="Ticker" required />
+      <input type="number" placeholder="Počet" required />
+      <input type="number" placeholder="Cena (USD)" required />
+      <button type="submit">Přidat transakci</button>
+    </form>
     <table id="transactionTable">
       <thead>
         <tr>
-          <th>Datum</th>
           <th>Ticker</th>
           <th>Počet</th>
-          <th>Cena za kus (USD)</th>
-          <th>Typ</th>
+          <th>Cena (USD)</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -173,24 +203,26 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
+    const sections = document.querySelectorAll(".section");
+    function showSection(id) {
+      sections.forEach(s => s.classList.remove("active"));
+      document.getElementById(id).classList.add("active");
+    }
+
     const currencySelect = document.getElementById("currency");
     const values = document.querySelectorAll(".value");
     const exchangeRate = 23.5;
-
     currencySelect.addEventListener("change", () => {
       const currency = currencySelect.value;
       values.forEach(cell => {
         const usd = parseFloat(cell.dataset.usd);
-        if (currency === "CZK") {
-          cell.textContent = (usd * exchangeRate).toFixed(2);
-        } else {
-          cell.textContent = usd.toFixed(2);
-        }
+        cell.textContent = currency === "CZK" ? (usd * exchangeRate).toFixed(2) : usd.toFixed(2);
       });
     });
 
-    document.getElementById("search").addEventListener("input", e => {
-      const filter = e.target.value.toLowerCase();
+    const searchInput = document.getElementById("search");
+    searchInput.addEventListener("input", () => {
+      const filter = searchInput.value.toLowerCase();
       document.querySelectorAll("#portfolio tbody tr").forEach(row => {
         row.style.display = row.textContent.toLowerCase().includes(filter) ? "" : "none";
       });
@@ -198,82 +230,39 @@
 
     document.getElementById("monthSelect").addEventListener("change", e => {
       const selected = e.target.value;
-      document.querySelectorAll("#dividendTable tbody tr").forEach(row => {
+      document.querySelectorAll("#calendar tbody tr").forEach(row => {
         row.style.display = (selected === "all" || row.dataset.month === selected) ? "" : "none";
       });
     });
 
-    const dividendData = [
-      { month: "2025-05", amount: 6.25 },
-      { month: "2025-06", amount: 12.50 },
-      { month: "2025-07", amount: 18.75 },
-      { month: "2025-08", amount: 22.00 },
-      { month: "2025-09", amount: 25.40 },
-    ];
-
-    new Chart(document.getElementById("dividendChart").getContext("2d"), {
+    new Chart(document.getElementById("dividendChart"), {
       type: "bar",
       data: {
-        labels: dividendData.map(d => d.month),
+        labels: ["Květen", "Červen", "Červenec"],
         datasets: [{
-          label: "Vyplacené dividendy (USD)",
-          data: dividendData.map(d => d.amount),
-          backgroundColor: "rgba(0, 153, 255, 0.8)",
-          borderColor: "rgba(0, 153, 255, 1)",
-          borderWidth: 1
+          label: "Dividendy (USD)",
+          data: [10, 15, 20],
+          backgroundColor: "#4f46e5"
         }]
       },
       options: {
-        responsive: true,
         plugins: {
-          legend: { display: false },
-          tooltip: {
-            backgroundColor: "#222",
-            titleColor: "#fff",
-            bodyColor: "#fff",
-            callbacks: {
-              label: ctx => `$${ctx.raw.toFixed(2)}`
-            }
-          }
+          legend: { display: false }
         },
         scales: {
-          x: {
-            ticks: { color: "#ddd" },
-            grid: { color: "rgba(255,255,255,0.1)" }
-          },
-          y: {
-            ticks: { color: "#ddd" },
-            grid: { color: "rgba(255,255,255,0.1)" },
-            beginAtZero: true
-          }
-        },
-        layout: {
-          padding: 10
+          x: { ticks: { color: "#ccc" }, grid: { color: "rgba(255,255,255,0.1)" } },
+          y: { ticks: { color: "#ccc" }, grid: { color: "rgba(255,255,255,0.1)" }, beginAtZero: true }
         }
       }
     });
 
-    const transactionForm = document.getElementById("transactionForm");
-    const transactionTable = document.getElementById("transactionTable").querySelector("tbody");
-
-    transactionForm.addEventListener("submit", e => {
+    document.getElementById("transactionForm").addEventListener("submit", e => {
       e.preventDefault();
-      const ticker = document.getElementById("ticker").value;
-      const quantity = document.getElementById("quantity").value;
-      const price = document.getElementById("price").value;
-      const date = document.getElementById("date").value;
-      const type = document.getElementById("type").value;
-
+      const [ticker, count, price] = [...e.target.elements].map(el => el.value);
       const row = document.createElement("tr");
-      row.innerHTML = `
-        <td>${date}</td>
-        <td>${ticker}</td>
-        <td>${quantity}</td>
-        <td>${price}</td>
-        <td>${type}</td>
-      `;
-      transactionTable.appendChild(row);
-      transactionForm.reset();
+      row.innerHTML = `<td>${ticker}</td><td>${count}</td><td>${price}</td>`;
+      document.querySelector("#transactionTable tbody").appendChild(row);
+      e.target.reset();
     });
   </script>
 </body>
